# InkWell

./: .gitignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.claude/context/: product-context.md  progress.md  project-brief.md  project-overview.md  project-structure.md  project-style-guide.md  project-vision.md  system-patterns.md  tech-context.md
.github/workflows/: merge-main.yml  nightly.yml  pr-gate.yml  weekly.yml
apps/desktop/: package.json  tauri.conf.json
apps/desktop/src-tauri/: Cargo.toml  claude-oauth.env  tauri.conf.json
apps/desktop/src-tauri/benches/: bridge_bench.rs  inference_bench.rs
apps/desktop/src-tauri/icons/: inkwell-doc.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  storage.rs
apps/desktop/src-tauri/src/bridge/: commands.rs  mod.rs
apps/desktop/src-tauri/src/inference/: llama.rs  llama_backend.rs  mod.rs  whisper.rs  whisper_backend.rs
apps/desktop/src-tauri/src/tests/: app_state_tests.rs  bridge_tests.rs  inference_tests.rs  mod.rs  whisper_tests.rs
apps/web/: next.config.js  package.json  vitest.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: BackpressureIndicator.tsx  ChatPanel.tsx  DiffPreview.tsx  DocumentList.tsx  DocumentListItem.tsx  DocumentTitle.tsx  Editor.tsx  EditorArea.tsx  ExportMenu.tsx  GrammarPopover.tsx  SearchBar.tsx  SettingsModal.tsx  SetupScreen.tsx  Sidebar.tsx  SortControl.tsx  StatusBar.tsx  TagFilter.tsx  TagInput.tsx  ThemeProvider.tsx  Toolbar.tsx  TrashView.tsx  VoiceInput.tsx
apps/web/src/hooks/: useAutoSave.ts  useChatAI.ts  useDocumentAI.ts  useFileOpen.ts  useGhostText.ts  useGrammar.ts  useVoicePipeline.ts
apps/web/src/lib/: ai-auth.ts  audio-capture.ts  chat-service.ts  chat-store.ts  claude-key-storage.ts  claude-subscription-provider.ts  document-ai-instance.ts  document-store.ts  document-utils.ts  grammar-fix.ts  grammar-instance.ts  grammar-replay.ts  tauri-bridge.ts  (+4 more)
docs/: ARCHITECTURE.md  CLAUDE-SIGNIN-BACKLOG.md  DECISIONS.md  GRAMMAR-SMOKE-TEST.md  INVARIANTS.md  PROMPTS.md  TEST-PLAN.md
docs/superpowers/plans/: 2026-07-13-grammar-check.md
docs/superpowers/specs/: 2026-07-13-grammar-check-design.md
e2e/: package.json  playwright.config.ts  playwright.export.config.ts  serve-export.mjs
e2e/tests/: ai-flows.spec.ts  editing-flows.spec.ts  grammar-check.spec.ts  offline-online.spec.ts  performance.spec.ts  settings-flows.spec.ts
evals/: package.json  vitest.config.ts
evals/src/: compare.test.ts  compare.ts
evals/src/tier1/: structural.test.ts
evals/src/tier2/: local-judge.test.ts  local-judge.ts
evals/src/tier3/: cloud-judge.test.ts  cloud-judge.ts  test-setup.ts
fixtures/claude/: critique-success.json  error-529.json  error-malformed.json  error-timeout.json  expand-success.json  rewrite-success.json  stream-200-but-error.json  stream-early-terminate.json  stream-no-message-stop.json  summarize-success.json
(+30 files in other folders)
