[package]
name = "inkwell-desktop"
version = "0.0.1"
description = "Inkwell AI Word Processor — Desktop Shell"
authors = ["Inkwell Team"]
edition = "2021"

[lib]
name = "inkwell_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "inkwell-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
# llama-cpp-2 = "0.1"    # TODO: uncomment when ready for local inference
# whisper-rs = "0.12"     # TODO: uncomment when ready for voice input

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "inference_bench"
harness = false

[[bench]]
name = "bridge_bench"
harness = false
