[package]
name = "inkwell-desktop"
version = "0.0.1"
description = "Inkwell AI Word Processor — Desktop Shell"
authors = ["Inkwell Team"]
edition = "2021"

[lib]
name = "inkwell_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "inkwell-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
local-inference = ["llama-cpp-2", "whisper-rs"]

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
llama-cpp-2 = { version = "0.1", optional = true }
whisper-rs = { version = "0.12", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "inference_bench"
harness = false

[[bench]]
name = "bridge_bench"
harness = false
